# wc2026-upset-propagation

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/mc_simu/: wc2026_fixtures.csv  wc2026_groups.json
docs/: DEPLOYMENT.md  OUTPUT_FORMAT.md  PIPELINE.md  RUNBOOK.md  VENDORING.md
output/: health.json  our_vs_market.json  top_10_ranking.json
output/runs/2026-06-11T13-36-49Z/: api_snapshot.json  argentina_belgium_runner_up_GJ.json  argentina_brazil_runner_up_CJ.json  argentina_england_runner_up_JL.json  argentina_france_runner_up_IJ.json  argentina_germany_runner_up_EJ.json  argentina_mexico_runner_up_AJ.json  argentina_netherlands_runner_up_FJ.json  argentina_portugal_runner_up_JK.json  argentina_runner_up_J.json  argentina_spain_runner_up_HJ.json  argentina_switzerland_runner_up_BJ.json  argentina_united_states_runner_up_DJ.json  baseline.json  belgium_runner_up_G.json  (+68 more)
src/upset_propagation/: __init__.py  baseline.py  calibrator.py  config.py  cron_utils.py  ensemble_matcher.py  health.py  implied_probs.py  input_validation.py  l1_matcher.py  logging_config.py  market_log.py  match_results.py  our_vs_market.py  propagator.py  run.py  scenarios.py  state_matcher.py  top_ranking.py  validation.py
tests/: test_calibrator.py  test_cron_utils.py  test_ensemble_matcher.py  test_health.py  test_implied_probs.py  test_input_validation.py  test_l1_matcher.py  test_logging_config.py  test_market_log.py  test_match_results.py  test_our_vs_market.py  test_propagator.py  test_scenarios.py  test_state_matcher.py  test_top_ranking.py  test_validation.py
(+8 files in other folders)
